# MinusWorkflows

./: .env.example  .gitignore  CHANGELOG.md  CONTEXT.md  QUICKSTART.md  README.md  config.yaml  docker-compose.yml  gitagent.skill  install.js  install.sh  package-lock.json  package.json  pyproject.toml  skill_registry.json  test_app.py
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
.memory/: EVOLUTION.md  INDEX.md
.vault/: .gitignore
docs/: api.md  architecture.md  quickstart.md
ocr_memory_rust/: Cargo.toml  Dockerfile
ocr_memory_rust/src/: api_keys.rs  auth.rs  db.rs  embedder.rs  main.rs  renderer.rs  retriever.rs  scrubber.rs  state.rs  telemetry.rs
scripts/: benchmark.js  generate_report.js  postinstall.js  retention_cron.js  test_harness.js  test_pipeline.js
skills/agentic/: SKILL.md
skills/architect/: SKILL.md
skills/auditor/: SKILL.md
skills/builder/: SKILL.md
skills/control-pane/: SKILL.md
skills/diagnose/: SKILL.md
skills/discovery/: SKILL.md
skills/domain-model/: SKILL.md
skills/enforcer/: SKILL.md
skills/evolve/: SKILL.md
skills/git-guardrails/: SKILL.md
skills/gitagent/: SKILL.md
skills/gitagent/references/: conflict_resolution.md
skills/github-triage/: AGENT-BRIEF.md  SKILL.md
skills/grill-me/: SKILL.md
skills/maintainer/: SKILL.md
skills/mapper/: SKILL.md
skills/minus/: SKILL.md
skills/minustoken/: SKILL.md
skills/ocr-memory/: SKILL.md
skills/orchestrator/: SKILL.md
skills/planner/: SKILL.md
skills/setup-pre-commit/: SKILL.md
skills/skills/: SKILL.md
skills/tdd/: SKILL.md
skills/to-issues/: SKILL.md
skills/to-prd/: SKILL.md
skills/vault-harness/: SKILL.md
utils/: agent_runner.js  budget_tracker.js  cli_adapter.js  failure_taxonomy.js  key_manager.js  memory_pruner.js  phase_verifier.js  pipeline_executor.js  pipeline_schemas.js  pytest_parser.js  scanner.js  skill_registry.js  skill_sync.js  tracer.js
