[package]
name = "ocr_memory_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp", "json"] }
image = "0.24"
ab_glyph = "0.2"
reqwest = { version = "0.11", features = ["json", "multipart"] }
tower-http = { version = "0.5", features = ["cors"] }
base64 = "0.21"
candle-core = "0.3"
candle-transformers = "0.3"
candle-nn = "0.3"
tokenizers = "0.15"
regex = "1.10"
hf-hub = "0.3"
